# Airflow-ETL-With-EKS-EFS-Sagemaker

./: .pre-commit-config.yaml  README.md  pyproject.toml  readme_eng.md
.github/workflows/: black_test.yaml
Airflow-dags/github-dags/: .pre-commit-config.yaml  README.md  config.py  dagextrationdata.py  erease_old_file.py
Airflow-dags/github-dags/tests/: conftest.py
Cloudformation/: 01-ML-Network.yaml  02-ML-SGroup.yaml  03-ML-S3.yaml  04-ML-RDS.yaml
Cloudformation/para testear/: 05-ML-EKS.yaml  06-ML-NodeGroup-EKs.yml
airflow-helm/: airflow-db-secret.yml  airflow-serviceAccount.yml  efs-pvc.yml  set_env.sh  values.yml
airflow-helm/para testear/: ELB-ML-Airflow.yml  ingress.yml
notebooks/: Ml-Airport-01-XGBoost-v2.flow  Ml-Airport-01-XGBoost-v2.ipynb  Ml-Airport-02-XGBoost-v1.ipynb  Ml-Airport-03-RandomCutForest.ipynb  manifest-s3.json
