[tool.poetry]
name = "AWS-ML"
version = "0.1.0"
description = "AWS Machine Learning with MWAA & CLoudFormation"
authors = ["Marcelo Grammatico"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pylint = "^2.12.2"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
